# tool_academic-rag

./: .gitignore  Makefile  pyproject.toml  requirements.txt
docs/adr/: ADR0001-record-architecture-decisions.md  ADR0002-use-arxiv-dataset.md  ADR0003-embed-abstracts-with-all-mpnet-base-v2.md
models/: quantize.py
src/: embed.py  inference.py  main.py
