[tool.poetry]
name = "src"
version = "0.1.0"
description = "Hello World"
license = "GNU Affero"
authors = ["Nicholas M. Synovic <nicholas.synovic@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/NicholasSynovic/template_python"
repository = "https://github.com/NicholasSynovic/template_python"
keywords = ["Template"]
classifiers = ["Development Status :: 1 - Planning", "Programming Language :: Python :: 3.9"]

[tool.poetry.dependencies]
python = "3.9.19"
modin = {version = "^0.32.0", extras = ["all"]}
sqlalchemy = "^2.0.35"
click = "^8.1.7"
torch = {version = "2.3.1+cxx11.abi", source = "pytorch-intel"}
torchvision = {version = "0.18.1+cxx11.abi", source = "pytorch-intel"}
torchaudio = {version = "2.3.1+cxx11.abi", source = "pytorch-intel"}
intel-extension-for-pytorch = {version = "2.3.110+xpu", source = "pytorch-intel"}
oneccl-bind-pt = {version = "2.3.100+xpu", source = "pytorch-intel"}
openvino = "^2024.4.0"


[[tool.poetry.source]]
name = "pytorch-intel"
url = "https://pytorch-extension.intel.com/release-whl/stable/xpu/us"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
